--- a/Contact.html
+++ b/Contact.html
@@ -10,8 +10,8 @@
 
     <h3>You can contact me by ~</h3>
       <ul>
-      <li><strong>Tel. No.: </strong>+0196862175</li>
-      <li><strong>Email: </strong>stefanlambertsinang@gmail.com</li>
+      <li><strong>Tel. No.: </strong>+xxxxxxxxxx</li>
+      <li><strong>Email: </strong>fakeemailaddress@gmail.com</li>
       <li><strong>LinkedIn: </strong><a href="https://my.linkedin.com/in/stefanlambertsinang">Stefan Lambert Sinang</a></li>
       </ul>
 <hr>
